--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,21 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>{% if page.title %}{{ page.title }} - {% endif %}PHP: The Right Way</title>
+        <title>{% if page.title %}{{ page.title }} - {% endif %}PHP: Na pravi način</title>
         <meta name="description" content="{{ page.description }}"/>
         <meta name="robots" content="index,follow,archive"/>
         <meta property="og:image" content="http://www.phptherightway.com/images/og-logo.png"/>
-        <meta property="og:title" content="PHP: The Right Way"/>
-        <meta property="og:description" content="An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative PHP tutorials around the Web"/>
+        <meta property="og:title" content="PHP: Na pravi način"/>
+        <meta property="og:description" content="Brz i lak za čitanje, podsetnik najboljih praksi u PHP ekosistemu, prihvaćeni standardi kodiranja i linkovi ka vodećim PHP tutorijalima"/>
         <meta property="og:url" content="http://www.phptherightway.com"/>
-        <meta property="og:site_name" content="PHP: The Right Way"/>
+        <meta property="og:site_name" content="PHP: Na pravi način"/>
         <meta property="og:type" content="website"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="/php-the-right-way/styles/all.css"/>
-        <link rel="stylesheet" href="/php-the-right-way/styles/print.css" media="print, handheld"/>
-        <link rel="stylesheet" href="/php-the-right-way/styles/syntax.css"/>
-        <link rel="icon" href="/php-the-right-way/images/favicon.png" type="image/png"/>
+        <link rel="stylesheet" href="{{ site.baseurl }}/styles/all.css"/>
+        <link rel="stylesheet" href="{{ site.baseurl }}/styles/print.css" media="print, handheld"/>
+        <link rel="stylesheet" href="{{ site.baseurl }}/styles/syntax.css"/>
+        <link rel="icon" href="{{ site.baseurl }}/images/favicon.png" type="image/png"/>
         <script>
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-362072-7']);
@@ -32,7 +32,7 @@
         <nav class="site-navigation">
             <div class="build-date">Last Updated: {{ site.time }}</div>
             <ul>
-                <li><a href="/#site-header">Welcome</a></li>
+                <li><a href="/#site-header">Dobrodošli</a></li>
                 {% assign lastIsChild = false %}
                 {% for post in site.posts reversed %}
                     {% if post.isChild and lastIsChild != true %}<ul>{% endif %}
@@ -85,6 +85,6 @@
 
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-        <script src="/php-the-right-way/scripts/setup.js"></script>
+        <script src="{{ site.baseurl }}/scripts/setup.js"></script>
     </body>
 </html>
