--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,16 +6,16 @@
         <meta name="description" content="{{ page.description }}"/>
         <meta name="robots" content="index,follow,archive"/>
         <meta property="og:image" content="http://www.phptherightway.com/images/og-logo.png"/>
-        <meta property="og:title" content="PHP: The Right Way"/>
-        <meta property="og:description" content="An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative PHP tutorials around the Web"/>
+        <meta property="og:title" content="PHP: Na pravi način"/>
+        <meta property="og:description" content="Brz i lak za čitanje, podsetnik najboljih praksi u PHP ekosistemu, prihvaćeni standardi kodiranja i linkovi ka vodećim PHP tutorijalima"/>
         <meta property="og:url" content="http://www.phptherightway.com"/>
-        <meta property="og:site_name" content="PHP: The Right Way"/>
+        <meta property="og:site_name" content="PHP: Na pravi način"/>
         <meta property="og:type" content="website"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One|Droid+Serif:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="/php-the-right-way/styles/all.css"/>
-        <link rel="stylesheet" href="/php-the-right-way/styles/syntax.css"/>
-        <link rel="icon" href="/php-the-right-way/images/favicon.png" type="image/png"/>
+        <link rel="stylesheet" href="{{ site.baseurl }}/styles/all.css"/>
+        <link rel="stylesheet" href="{{ site.baseurl }}/styles/syntax.css"/>
+        <link rel="icon" href="{{ site.baseurl }}/images/favicon.png" type="image/png"/>
         <script>
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-362072-7']);
