Translated first five posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <meta name="robots" content="index,follow,archive"/>
         <meta property="og:image" content="http://www.phptherightway.com/images/og-logo.png"/>
         <meta property="og:title" content="PHP: Na pravi način"/>
-        <meta property="og:description" content="Brz i lak za čitanje podsetnik najboljih praksi u PHP ekosistemu, prihvaćeni standardi kodiranja i linkovi ka vodećim PHP tutorijalima"/>
+        <meta property="og:description" content="Brz i lak za čitanje, podsetnik najboljih praksi u PHP ekosistemu, prihvaćeni standardi kodiranja i linkovi ka vodećim PHP tutorijalima"/>
         <meta property="og:url" content="http://www.phptherightway.com"/>
         <meta property="og:site_name" content="PHP: Na pravi način"/>
         <meta property="og:type" content="website"/>
