--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
                     <li><a href="{{ site.baseurl }}/#{{ post.title | downcase | replace:' ','_' | replace:'(','' | replace:')','' | replace:'.','' | replace:'-','' }}">{{ post.title }}</a>
                     {% assign lastIsChild = post.isChild %}
                 {% endfor %}
-                <li><a href="/#site-footer">Zasluge</a></li>
+                <li><a href="{{ site.baseurl }}/#site-footer">Zasluge</a></li>
             </ul>
         </nav>
         <div class="site-content">
